[package]
name = "air_demo"
version = "0.1.0"
edition = "2024"
authors = ["Caleb Couch <caleb@orange.me>"]
description = "A.I.R DEMO"
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/air_demo.git"


[dependencies]
air = "1.0.2"
serde_json = "1.0.149"
tokio = {version="1.50.0", features=["macros", "rt"]}
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
