[package]
name = "air_demo"
version = "1.0.0"
edition = "2024"
authors = ["Caleb Couch <caleb@orange.me>"]
description = "A.I.R DEMO"
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/air_demo.git"


[dependencies]
air = "1.0.2"
serde_json = "1.0.149"
tokio = {version="1.50.0", features=["macros", "rt"]}
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "air_demo"
path = "src/main.rs"

[package.metadata.dist]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
